gateway-resources/gateway.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: nginx-gateway-tls-secret
        group: ""
    allowedRoutes:
      namespaces:
        from: All
